# rust_axum

./: Cargo.toml
src/: main.rs
tests/: .quick_dev.rs.swp  quick_dev.rs
