[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
cargo-watch = "8.4.0"
tokio = {version = "1.26.0", features = ["full"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"
[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
